# AlwaysOn

./: .gitignore  README.md  jarvis.example.toml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
android/app/src/main/java/com/sixoffive/ao/jarvis/: JarvisService.kt  MainActivity.kt
android/app/src/main/java/com/sixoffive/ao/jarvis/audio/: AudioCapture.kt  VadSegmenter.kt
android/app/src/main/java/com/sixoffive/ao/jarvis/classifier/: Classifier.kt  LlamaNative.kt
android/app/src/main/java/com/sixoffive/ao/jarvis/net/: JarvisWsClient.kt  Messages.kt
android/app/src/main/java/com/sixoffive/ao/jarvis/stt/: ModelStore.kt  ServerStreamingStt.kt  SpeechToText.kt  SystemStt.kt  TranscriptLog.kt  WhisperNative.kt  WhisperStt.kt
android/app/src/main/java/com/sixoffive/ao/jarvis/trigger/: Trigger.kt
android/app/src/main/java/com/sixoffive/ao/jarvis/tts/: Tts.kt
android/app/src/main/java/com/sixoffive/ao/jarvis/ui/: NetGraphView.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_mic.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
client/: pyproject.toml
client/jarvis_client/: __main__.py  _cuda.py  audio.py  listen.py  main.py  pipeline.py  segmenter.py  stream.py  stt.py  tts.py  vad.py  wake.py
server/: pyproject.toml
server/jarvis_server/: __main__.py  _cuda.py  active_session.py  app.py  banlist.py  catalog.py  claude.py  config.py  conversation.py  dictation.py  fastpath.py  mode.py  ollama_router.py  router.py  session.py  stt.py  trigger.py
server/jarvis_server/tools/: __init__.py  builtin.py  notes.py  save_code.py  search.py  timer.py  vault.py  weather.py  wikipedia.py  wol.py
shared/: pyproject.toml
shared/jarvis_shared/: __init__.py  protocol.py
