[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-shared"
version = "0.0.1"
description = "Wire protocol shared by jarvis-client and jarvis-server."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["jarvis_shared"]
